style/style.css
/* ... */
span.replycounter {
    position:relative;
    top:6px;
    font-weight:bold;
	font-size:21px;
}

span.postto {
    font-weight:bold;
	  font-size:21px;
	  float:left;
	  padding-right:5px;
	position:relative;
	top:3px;
}

div#mainarea {
    overflow-x: auto;
    overflow-y: auto;
    width: 100%;
    padding:0;
}

div.column {
    margin:0px;
	height: 100%;
    overflow: hidden;
}

div.columnheading {
	min-height:40px;
	padding-left:10px;
	text-align:left;
	font-size: 110%;
	font-weight:bold;
	-webkit-border-top-left-radius: 5px;
	-webkit-border-top-right-radius: 5px;
	-moz-border-radius-topleft: 5px;
	-moz-border-radius-topright: 5px;
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
}

div.columnheading span.title {
    float:left;
    position:relative;
    top:2px;
	text-decoration:none;
    overflow-x: auto;
    overflow-y: auto;
}

div.columnheading span.title span.accountname {
    font-weight:lighter;
}

div.columnheading img {
    float:left;
    position:relative;
    top:11px;
}

div.columnheading span.columnbuttons {
    float:right;
    position:relative;
    top:5px;
}

div.error {
	padding: 10px;
	margin-bottom:10px;
}
div.error img {
	margin: 5px auto 0px auto;
}

div.morelessform {
    float:right;
}

div.columnheading span.columnbuttons a.deletecolumnbutton {
    display:none;
}

div.columnnav {
    clear:both;
    display:none;
    margin: 10px 0px;
    padding: 10px 0px;
}

.item {
    padding:5px;
	margin:15px 15px 35px 15px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
}

.convo {
	margin:15px 15px 0px 15px;
}

span.metatext {
	display:none;
	width:100%;
}

table {
	margin:0px;
}

table.bigtable {
	margin-top:5px;
}

div#replybox {
    padding:10px 10px 20px 10px;
    margin:0;
	height:30px;
}
    
tr {
	margin: 0px;
	padding: 0px;
}

td {
	vertical-align: top;
	margin: 0px;
	padding: 0px;
}

td .tweettextcell {
	padding-left: 5px;
}

.name a{
	text-decoration:none;
}

.convolikearea a {
	text-decoration:none;
}

.tweettext a {
	text-decoration:none;
}

.metatext a {
	text-decoration:none;
}

.tweettext a.hover {
	text-decoration:underline;
}

.metatext a.hover {
	text-decoration:underline;
}

.clear {
	clear:both;
}

div.colswitcherform {
	text-align:center;
	width:100%;
	text-transform: none;
	font-size:80%;
}

div.colswitcherform a {
	padding:0 3px 1px 3px;
	border-radius:2px;
	--moz-border-radius:2px;
    --webkit-border-radius:2px;
	text-decoration:none;
}

img {
	border:0px;
}

div.settingsheader {
	padding:5px;
	margin:0;
	background-color:#ff0000;
}

div.settingscontent {
	padding:20px;
}

div.manageaccountbuttons {
	float:right;
	text-align:right;
	padding-left:20px;
}

div.account {
	margin-left:10px;
	margin-right:10px;
	padding:10px;
	margin-bottom:5px;
	width:300px;
}

textarea#blocklist {
    width:90%;
}

p.settingsPageButtonRow {
	padding-bottom:20px;
}

a.settingsPageButton {
	float:right;
}

a#setBannedPhrases {
	float:right;
}

a.button,
a.icon {
    text-decoration: none;
    font: bold 12px Helvetica, Arial, sans-serif;
    line-height: 27px;
    height: 27px;
    display: block;
    float: left;
    margin-right: 10px;
    padding: 0 10px;
    border-radius: 4px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
    -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
    -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=1, Direction=90, Color='#ffffff')";
    filter: progid:DXImageTransform.Microsoft.Shadow(Strength=1, Direction=90, Color='#ffffff');
    -webkit-transition: border-color .218s;
    -moz-transition: border .218s;
    -o-transition: border-color .218s;
    transition: border-color .218s;
    cursor:default;
}
a.icon {
    padding: 0;
    margin-bottom: 10px;
}
a.icon span {
    display: block;
    line-height: 27px;
    height: 27px;
    width: 36px;
    max-width: 36px;
    overflow: hidden;
    text-indent: -9999px;
}
a.left {
    margin: 0;
    -webkit-border-top-right-radius: 0;
    -moz-border-radius-topright: 0;
    border-top-right-radius: 0;
    -webkit-border-bottom-right-radius: 0;
    -moz-border-radius-bottomright: 0;
    border-bottom-right-radius: 0;
}
a.middle {
    border-radius: 0;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    margin: 0;
}
a.right {
    -webkit-border-top-left-radius: 0;
    -moz-border-radius-topleft: 0;
    border-top-left-radius: 0;
    -webkit-border-bottom-left-radius: 0;
    -moz-border-radius-bottomleft: 0;
    border-bottom-left-radius: 0;
}

a.icon1 span {background:url(button-icons.png) -0px -40px;}
a.icon2 span {background:url(button-icons.png) -36px -40px;}
a.icon3 span {background:url(button-icons.png) -72px -40px;}
a.icon4 span {background:url(button-icons.png) -108px -40px;}
a.icon5 span {background:url(button-icons.png) -144px -40px;}
a.icon6 span {background:url(button-icons.png) -180px -40px;}
a.icon7 span {background:url(button-icons.png) -216px -40px;}
a.icon8 span {background:url(button-icons.png) -252px -40px;}
a.icon9 span {background:url(button-icons.png) -288px -40px;}
a.icon10 span {background:url(button-icons.png) -324px -40px;}
a.icon11 span {background:url(button-icons.png) -0px -76px;}
a.icon12 span {background:url(button-icons.png) -36px -76px;}
a.icon13 span {background:url(button-icons.png) -72px -76px;}
a.icon14 span {background:url(button-icons.png) -108px -76px;}
a.icon15 span {background:url(button-icons.png) -144px -76px;}
a.icon16 span {background:url(button-icons.png) -180px -76px;}
a.icon17 span {background:url(button-icons.png) -216px -76px;}
a.icon18 span {background:url(button-icons.png) -252px -76px;}
a.icon19 span {background:url(button-icons.png) -288px -76px;}
a.icon20 span {background:url(button-icons.png) -324px -76px;}
a.icon21 span {background:url(button-icons.png) -0px -112px;}
a.icon22 span {background:url(button-icons.png) -36px -112px;}
/* ... */

